# distributed-iiot-poc

./: .gitignore  LICENSE.md  README.md  nats.conf.example
.github/workflows/: release.yml
embedded/: .gitignore  Cargo.toml  connect_wifi.py  main.py  mqtt.py  temp_sensor.py
embedded/pico-w-mpy/: .gitignore  main.py
embedded/src/: lib.rs  main.rs
simulation/: Cargo.toml
simulation/src/: main.rs  sensor.rs
wasmcloud/actor/interface/: codegen.toml  common.smithy
wasmcloud/actor/interface/rust/src/: lib.rs
wasmcloud/actors/event-logger/: Cargo.toml  README.md  wasmcloud.toml
wasmcloud/actors/event-logger/src/: lib.rs
wasmcloud/actors/http-gateway/: Cargo.toml  README.md  wasmcloud.toml
wasmcloud/actors/http-gateway/src/: lib.rs
wasmcloud/actors/interface/: .gitignore  codegen.toml  common.smithy  pangea_api.smithy  ui.smithy
wasmcloud/actors/interface/rust/src/: lib.rs  pangea_api.rs  ui.rs
wasmcloud/actors/pangea-api/: Cargo.toml  README.md  wasmcloud.toml
wasmcloud/actors/pangea-api/src/: api.rs  lib.rs
wasmcloud/actors/sensor-reader/: Cargo.toml  README.md  wasmcloud.toml
wasmcloud/actors/sensor-reader/src/: lib.rs
wasmcloud/provider/interface/actors-interface/: codegen.toml
wasmcloud/provider/interface/actors-interface/rust/: Cargo.toml
wasmcloud/provider/interface/actors-interface/rust/src/: lib.rs
wasmcloud/provider/interface/polling-interface/: codegen.toml  polling.smithy
wasmcloud/provider/interface/polling-interface/rust/: Cargo.toml
wasmcloud/provider/interface/polling-interface/rust/src/: lib.rs  polling.rs
wasmcloud/provider/nats-sensor-polling/: Cargo.toml  Makefile
wasmcloud/provider/nats-sensor-polling/src/: main.rs  nats.rs  sensor.rs
