[package]
name = "embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
#cortex-m-rt = "0.7"
cortex-m-rt = ">=0.6.3, <0.8"
heapless = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3.4"
defmt-rtt = "0.3.2"
nrf52840-dk-bsp = "0.2.0"
nb = "1.1.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
