[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.29.0"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_bytes = "0.11.9"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
macaddr = { version = "1.0.1", features = ["serde_std"] }
rand = "0.8.5"
rand_distr = "0.4.3"
once_cell = "1.18.0"
