[package]
name = "http_gateway"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "http_gateway"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpserver = "0.10.0"
wasmcloud-interface-logging = "0.9.0"
actor-interfaces = { path = "../interface/rust" }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
