[package]
name = "pangea_api"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pangea_api"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.13"
wasmcloud-interface-logging = "0.9.0"
wasmcloud-interface-httpclient = "0.9.0"
wasmcloud-interface-messaging = "0.9.0" # TODO: rm after testing
wasmcloud-interface-keyvalue = "0.10.0"
actor-interfaces = { path = "../interface/rust" }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18.0"
tokio = { version = "1.28.2", default-features = false, features = ["sync"] }
chrono = { version = "0.4.26", default-features = false, features = ["alloc"] }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
