[package]
name = "sensor_reader"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "sensor_reader"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpserver = "0.10"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
