[package]
name = "nats-sensor-polling"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-nats = "0.29.0"
async-trait = "0.1"
futures = "0.3"
base64 = "0.21.2"
once_cell = "1.18.0"
serde_bytes = "0.11.9"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tokio = { version = "1.28", features = ["full"] }
uuid = "1.3.3"
anyhow = "1.0.71"
regex = "1.8.4"

wasmbus-rpc = { version = "0.13", features = ["otel"] }
wasmcloud-interface-polling = { version = "0.1", path = "../interface/polling-interface/rust" }
wascap = "0.11.0"
macaddr = { version = "1.0.1", features = ["serde_std"] }

actor-interfaces = { version = "0.1", path = "../interface/actors-interface/rust" }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.8"

[[bin]]
name = "nats-sensor-polling"
path = "src/main.rs"
