[package]
name = "actor-interfaces"
version = "0.1.0"
description = "I only uploaded this to crates.io because I was having some issues cross compiling with local dependencies. If anyone wants to use the name for something actually useful, DM me on github"
authors = [ "jclmnop" ]
edition = "2021"
license = "Apache-2.0"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
wasmbus-rpc = "0.13"

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.7"

